# sae

./: .gitignore  README.md  pyproject.toml
examples/: run_gemini_loop.py  run_gui_web.py  run_loop.py
src/sae/: __init__.py  pipeline.py
src/sae/action/: __init__.py  base.py  gemini.py  mock.py
src/sae/execute/: __init__.py  base.py  desktop.py
src/sae/state/: __init__.py  base.py  screen.py
